--- a/package.json
+++ b/package.json
@@ -2,24 +2,47 @@
   "name": "react-esqueleto",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.41",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/chai": "^4.3.1",
+    "@types/handlebars-helpers": "^0.5.3",
+    "@types/jest": "^28.1.4",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/rimraf": "^3.0.2",
+    "@types/shelljs": "^0.8.11",
+    "@types/sinon": "^10.0.12",
+    "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
+    "handlebars-helpers": "^0.10.0",
+    "mocha": "^10.0.0",
+    "node-plop": "^0.26.2",
+    "plop": "^2.7.4",
+    "prettier": "^2.3.2",
+    "prettier-eslint": "^12.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.5",
+    "sinon": "^14.0.0",
+    "slugify": "^1.6.5",
     "typescript": "^4.7.4",
+    "ts-node": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "plop": "cross-env TS_NODE_PROJECT='./provision/generators/plop/ts-node.tsconfig.json' plop --plopfile provision/generators/plop/index.ts",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
